--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
-user nginx;
 worker_processes auto;
-error_log /var/log/nginx/error.log;
+error_log /var/log/nginx/nginx-error.log;
+pid /tmp/nginx.pid;
 
 events {
     worker_connections 1024;
@@ -16,10 +16,10 @@ http {
 
   # frontend
   server {
-    listen 80;
+    listen 8080;
     server_name tincan.com;
 
-    access_log /var/log/nginx/access_frontend.log main;
+    access_log /var/log/nginx/nginx-access-frontend.log main;
 
     location / {
       proxy_pass http://frontend:3000;
@@ -32,10 +32,10 @@ http {
 
   # backend API
   server {
-    listen 80;
+    listen 8080;
     server_name api.tincan.com;
 
-    access_log /var/log/nginx/access_backend.log main;
+    access_log /var/log/nginx/nginx-access-backend.log main;
 
     location / {
       proxy_pass http://backend:3005;
