--- a/nginx.conf
+++ b/nginx.conf
@@ -3,23 +3,44 @@ error_log /var/log/nginx/nginx-error.log;
 pid /tmp/nginx.pid;
 
 events {
-    worker_connections 1024;
+  worker_connections 1024;
 }
 
 http {
   include /etc/nginx/mime.types;
   log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                   '$status $body_bytes_sent "$http_referer" '
-                  '"$http_user_agent" "$http_x_forwarded_for"';
+                  '"$http_user_agent" "$http_x_forwarded_for" '
+                  '$request_time $upstream_response_time';
+
+  # Basic settings
   sendfile on;
   keepalive_timeout 65;
+  server_tokens off;
 
-  # frontend
+  # Buffer size settings
+  client_max_body_size 5M;
+
+  # Client timeouts
+  client_body_timeout 12;
+  client_header_timeout 12;
+  send_timeout 10;
+
+  # Rate limiting
+  limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+  limit_conn_zone $binary_remote_addr zone=addr:10m;
+
+  # FRONTEND
   server {
     listen 8080;
-    server_name tincan.com;
+    server_name tincan.dayboch.com;
 
     access_log /var/log/nginx/nginx-access-frontend.log main;
+    error_log /var/log/nginx/error-frontend.log warn;
+
+    # Rate limiting
+    limit_req zone=one burst=10 nodelay;
+    limit_conn addr 10;
 
     location / {
       proxy_pass http://frontend:3000;
@@ -27,15 +48,32 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+
+      # Timeouts
+      proxy_connect_timeout 45s;
+      proxy_send_timeout 45s;
+      proxy_read_timeout 45s;
     }
   }
 
-  # backend API
+  # BACKEND API
   server {
     listen 8080;
-    server_name api.tincan.com;
+    server_name api.tincan.dayboch.com;
 
     access_log /var/log/nginx/nginx-access-backend.log main;
+    error_log /var/log/nginx/error-backend.log warn;
+
+    # Rate limiting
+    limit_req zone=one burst=10 nodelay;
+    limit_conn addr 10;
+
+    set $cors_origin "http://tincan.dayboch.com";
+
+    # Deny access to hidden files
+    location ~ /\. {
+      deny all;
+    }
 
     location / {
       proxy_pass http://backend:3005;
@@ -44,24 +82,29 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
 
-
-      # Add CORS headers
-      add_header 'Access-Control-Allow-Origin' 'http://tincan.com';
-      add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT PATCH DELETE OPTIONS';
-      add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
-      add_header 'Access-Control-Allow-Credentials' 'true';
+      # Timeouts
+      proxy_connect_timeout 45s;
+      proxy_send_timeout 45s;
+      proxy_read_timeout 45s;
 
       # Handle preflight requests
       if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' 'http://tincan.com';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Origin' $cors_origin;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Content-Length' 0;
         add_header 'Content-Type' 'text/plain';
         return 204;
       }
-    }
 
+      # Add CORS headers
+      if ($request_method != 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' $cors_origin always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+      }
+    }
   }
 }
