Consolidate nginx logs
This commit consolidates the logs from all of the servers to just
one access log and one error log. This is easier than having
multiple log files per server for when we start ingesting the logs
into our observability pipeline.

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,10 @@ http {
                   '"$http_user_agent" "$http_x_forwarded_for" '
                   '$request_time $upstream_response_time';
 
+  # Global logging for all servers
+  access_log /var/log/nginx/nginx-access.log main;
+  error_log /var/log/nginx/nginx-error.log warn;
+
   # Basic settings
   sendfile on;
   keepalive_timeout 65;
@@ -34,9 +38,6 @@ http {
   server {
     listen 8080;
     server_name tincan.dayboch.com;
-
-    access_log /var/log/nginx/nginx-access-frontend.log main;
-    error_log /var/log/nginx/error-frontend.log warn;
 
     # Rate limiting
     limit_req zone=one burst=10 nodelay;
@@ -60,9 +61,6 @@ http {
   server {
     listen 8080;
     server_name api.tincan.dayboch.com;
-
-    access_log /var/log/nginx/nginx-access-backend.log main;
-    error_log /var/log/nginx/error-backend.log warn;
 
     # Rate limiting
     limit_req zone=one burst=10 nodelay;
